# aes-dfa

./: LICENSE  README.md  docker-compose.yml
.github/workflows/: testing.yml
aes-dfa/: README.md  pyproject.toml
aes-dfa/src/: attack.rs  first_step.rs  key_expansion.rs  lib.rs  second_step.rs
aes-dfa/src/utils/: mod.rs  multiply.rs  transform.rs  types.rs
aes-dfa/tests/: test_aes_dfa.py
backend/: .coverage  .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py  schemas.py  settings.py  tasks.py
backend/tests/: test_main.py  test_schemas.py  test_tasks.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: CrackedKey.vue
frontend/src/views/: HomeView.vue
rust/: Cargo.toml
rust/src/: attack.rs
rust/src/utils/: constants.rs
